fix: Hide overflown percent label

--- a/src/styles/result.scss
+++ b/src/styles/result.scss
@@ -15,6 +15,7 @@ $badge-radius: 21px;
     justify-content: center;
     align-items: center;
     border-radius: inherit;
+    overflow: hidden;
 
     &.mine {
       color: $white;
